# text2error

./: pyproject.toml  readme.md
tests/edits/: edit_test.py
text2error/: generator.py  model.py  validator.py
text2error/edits/: edit.py
text2error/edits/generators/abc/: base.py
text2error/edits/generators/random/abc/: base.py
text2error/edits/generators/random/char/: duplicate.py  remove.py  transpose.py
text2error/edits/generators/random/mlm/: duplicate.py  insert.py  remove.py  substitute.py  transpose.py
text2error/edits/generators/random/mlm/abc/: base.py  model.py  tokenizer.py
text2error/edits/validators/abc/: base.py
text2error/edits/validators/scored/: lm.py
text2error/edits/validators/scored/abc/: base.py
text2error/utils/: cache.py  misc.py  random.py  transformers.py
