[tool.poetry]
name = "text2error"
version = "0.0.0"
description = "Introduce errors in error free text"
authors = ["Simone Primarosa <simonepri@outlook.com>"]
license = "MIT"
homepage = "https://github.com/simonepri/text2error#readme"
repository = "https://github.com/simonepri/text2error"
readme = "readme.md"
keywords = ["text", "error", "generation", "ged", "gec"]

packages = [
  {include = "text2error", from = "."},
  {include = "tests", from = ".", format = "sdist"},
]

[tool.taskipy.tasks]
lint = "python -m pylint text2error tests -v --output-format colorized --extension-pkg-whitelist=numpy --disable duplicate-code,bad-continuation"
types = "python -m mypy text2error tests --ignore-missing-imports"
format = "python -m black text2error tests"
test = "python -m pytest --cov=text2error tests --verbose"

[tool.poetry.dependencies]
python = ">=3.6,<3.8"
pip = ">=20.0.0"
numpy = "^1.18.2"
torch = "^1.4.0"
# See https://github.com/python-poetry/poetry/issues/2326
# As workaround run `pip install --upgrade -qq git+https://github.com/huggingface/transformers.git@b5c6d3d4c7cd81a5396a85026b6c8b730d1a55b6`

[tool.poetry.dev-dependencies]
taskipy = "^1.2.0"
black = "~19.10b0"
pylint = "^2.4.4"
mypy = "~0.770"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"
pytest-sugar = "~0.9.3"
pytest-describe = "^1.0.0"

[build-system]
requires = ["poetry >=1,<2"]
build-backend = "poetry.masonry.api"
