[tool.poetry]
name = "text2error"
version = "0.0.0"
description = "Introduce errors in error free text"
authors = ["Simone Primarosa <simonepri@outlook.com>"]
license = "MIT"
homepage = "https://github.com/simonepri/text2error#readme"
repository = "https://github.com/simonepri/text2error"
readme = "readme.md"
keywords = ["text", "error", "generation", "ged", "gec"]

packages = [
  {include = "text2error", from = "."},
  {include = "tests", from = ".", format = "sdist"},
]

[tool.taskipy.tasks]
lint = "python -m pylint text2error tests -v --output-format colorized --ignored-classes=torch --extension-pkg-whitelist=numpy --disable duplicate-code,bad-continuation"
types = "python -m mypy text2error tests --ignore-missing-imports"
format = "python -m black text2error tests"
test = "python -m pytest --cov=text2error tests --verbose"

[tool.poetry.dependencies]
python = ">=3.6,<3.8"
pip = ">=20.0.0"
numpy = "^1.18.2"
torch = "^1.4.0"
transformers = "^2.9.0"
lm_scorer = "~0.3.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
black = "~19.10b0"
pylint = "^2.5.2"
mypy = "~0.770"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
pytest-sugar = "~0.9.3"
pytest-describe = "^1.0.0"

[build-system]
requires = ["poetry >=1,<2"]
build-backend = "poetry.masonry.api"
